# sunday-platform

./: .gitignore  Cargo.toml  DISTRIBUTION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: publish.yml
crates/sunday-auth/: Cargo.toml
crates/sunday-auth/src/: callback.rs  lib.rs  pkce.rs  secret.rs  session.rs  supabase.rs
crates/sunday-contracts/: Cargo.toml
crates/sunday-contracts/src/: builders.rs  bundle.rs  common.rs  deeplink.rs  lib.rs  live.rs  mapping.rs  recording.rs  service.rs  song.rs  stage.rs  usage.rs
crates/sunday-contracts/tests/: builders.rs  conformance.rs  property.rs
docs/: INTEGRATION-ROADMAP.md  NEEDS-RICHARD.md  NIGHT-REPORT-2026-05-30.md  PHASES.md  PUSH.md  SESSION-PROGRESS-2026-06-03.md  SMOKE-TEST.md  UX-PRINCIPLES.md
fixtures/: deeplink_urls.json  live_cue.json  live_now_playing.json  live_service.json  live_service_ended.json  media_handoff.json  recording_manifest.json  song_ref.json  stage-to-rec-cues.json  stage-to-song-usage.json  stage_manifest.json  sunday_bundle.json  usage_event.json
