[package]
name = "sunday-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Sunday ID auth primitives: PKCE, OAuth loopback-callback parsing, and an OS-keychain secret store (shared by the Tauri desktop apps)."

[dependencies]
sha2.workspace = true
getrandom.workspace = true
keyring.workspace = true
