[package]
name = "sunday-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Canonical cross-app wire contracts for the Sunday suite (Rust mirror of @sunday/contracts)."

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
